 - Fixed MainWindow not propagating close events to docked widgets
 - X11: Improved detecting which window is under the cursor, by using native X11 API
 - X11: Fixed dragging a maximized floating window. Its size is now restored to normal size when the drag starts.
 - Added DockWidgetBase::currentTabIndex()
 - Added InitialVisibilityOption::PreserveCurrentTab

* v1.5.0 (24 November 2021)
 - Install the Python bindings to "site-packages"
 - The Python bindings for Qt6 use the "PyKDDockWidgetsQt6" namespace
 - Co-installable with Qt6
 - Adds support for non-detachable central widget, MainWindowOption_HasCentralWidget. (#225)
 - Fix corrupt layout when restoring old JSON
 - Fix "Unpin" button not showing up in overlayed widgets
 - Minimum Qt version is now 5.15

* v1.4.0 (16 July 2021)
  - No longer supports Qt versions less than 5.12
  - Experimental MDI support. By using MainWindowMDI you can now have "docked" dock widgets
    which are free to be arbitrarily positioned and even overlapped inside the main window.
  - TitleBar's height is now controlled by sizeHint() instead of hardcoded.
    If you haven't overridden TitleBar or just inheriting from TitleBarWidget then there's nothing to do,
    as TitleBarWidget already reimplements sizeHint. If you're inheriting directly from TitleBar then make
    sure to provide a sizeHint.
  - Added MainWindow::closeDockWidgets()
  - Fixed crash in MainWindow::layoutEqually()
  - QtQuick: Added more declarative API
  - FloatingWindow now honours the dockwidget's max-size, if there's a single
    dock widget docked. Tabbed cases are more difficult since QStackedLayout doesn't
    propagate size constraints.
  - Added MainWindowBase::frameCountChanged()
  - Introduced Config::setDropIndicatorsInhibited(), which allows you to disable support
  for drop indicators while dragging.
  - Fixed embedding the main window into a non-kddw main window (#204, #168)
  - Fixed crash with an MFC application