@@ -11,6 +11,7 @@
  - X11: Fixed dragging a maximized floating window. Its size is now restored to normal size when the drag starts.
  - Added DockWidgetBase::currentTabIndex()
  - Added InitialVisibilityOption::PreserveCurrentTab
+ - Added MainWindow::internalLayout() for advanced customization
 
 * v1.5.0 (24 November 2021)
  - Install the Python bindings to "site-packages"
